syntax = "proto3";

package media;

service MediaUpload {
  rpc UploadVideo(stream VideoChunk) returns (UploadResponse);
  rpc GetQueueStatus(Empty) returns (QueueStatus);
}

message VideoChunk {
  string filename = 1;
  bytes data = 2;
  string hash = 3; // for duplicate detection
}

message UploadResponse {
  string status = 1;
  string message = 2;
}

message Empty {}

message QueueStatus {
  bool full = 1;
  int32 current_size = 2;
}
